Bug fix - Fenetre (-drag+resize)/Split script.js

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Desktop Interface</title>
+    <title>Mathis Vaille</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="navbar.css">
     <link rel="stylesheet" href="desktop-icon.css">
@@ -179,16 +180,9 @@
     
 
     <script src="https://cdn.jsdelivr.net/npm/interactjs@1.10.11/dist/interact.min.js"></script>
-    <script src="navbar.js"></script>
-    <script src="script.js"></script>
-    <script src="desktop-icon.js"></script>
-    <script src="calculator.js"></script>
-    <script src="menu-contextuel.js"></script>
-    <script src="create-folder.js"></script>
-    <script src="delete-button.js"></script>
-    <script src="open-explorer-window.js"></script>
-    <script src="cursor.js"></script>
-    <script src="selection-box.js"></script>
+    <script type="module" src="script.js" defer></script>
+
+
 
 </body>
 </html>
