Bug Fix - Ouverture fenetre App (Version Stable)

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
             <div class="window-header">
                 <span class="window-title">Window 2</span>
                 <button class="minimize">-</button>
+                <button class="maximize">+</button>
                 <button class="close">×</button>
             </div>
             <div class="window-content">
