--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               <div class="desktop-icon-container">
                 <div class="desktop-icon" data-window="calculator">
                   <img class="desktop-icon-image" src="./Icons/Computer.png" alt="Application Icon">
-                  <p class="desktop-icon-label">Application</p>
+                  <p class="desktop-icon-label">Calculatrice</p>
                 </div>
               </div>
 
