--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
     <div class="navbar">
         <div class="left-section">
             <div class="dropdown">
-                <button class="dropbtn">Mathis Vaille</button>
+                <button class="dropbtn principal">Mathis Vaille</button>
                 <div class="dropdown-content principal-option">
                     <a href="#" data-action="openAboutWindow">À Propos</a>
                     <a href="#" data-action="openContactWindow">Contact</a>
@@ -216,7 +216,7 @@
             <span class="navbar-separator"></span>
             <div id="minimized-windows" class="minimized-window-container"></div>
             <div id="minimized-windows-overflow" class="dropdown">
-                <button id="overflow-button" class="dropbtn">...</button>
+                <button id="overflow-button" class="dropbtn overflow-btn">...</button>
                 <div class="dropdown-content minimized-overflow-options">
                     <!-- Les fenêtres minimisées en trop seront déplacées ici par JavaScript -->
                 </div>
