Delete window with deleting icons v1

--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
 
         <div class="desktop">
 
-            <div class="desktop-icon-container" data-init-x="0" data-init-y="0">
+            <div class="desktop-icon-container" data-init-x="0" data-init-y="0" data-icon-id="calculator">
                 <div class="desktop-icon" data-window="calculator">
                     <img class="desktop-icon-image" src="./Icons/Computer.png" alt="Application Icon">
                     <p class="desktop-icon-label">Système</p>
                 </div>
             </div>
-            <div class="desktop-icon-container">
+            <div class="desktop-icon-container" data-icon-id="explorer-window">
                 <div class="desktop-icon" data-window="explorer-window">
                     <img class="desktop-icon-image" src="./Icons/Folder-1.png" alt="Folder Icon">
                     <p class="desktop-icon-label">Folder</p>
                 </div>
             </div>
-            <div class="desktop-icon-container">
+            <div class="desktop-icon-container" data-icon-id="calculator">
                 <div class="desktop-icon" data-window="calculator">
                     <img class="desktop-icon-image" src="./Icons/Computer.png" alt="Application Icon">
                     <p class="desktop-icon-label">Calculatrice</p>
