Bug fixes - Améliorations

--- a/index.html
+++ b/index.html
@@ -200,7 +200,19 @@
     </div>
 
 
-
+    <div id="clock-window-template" class="window hidden">
+        <div class="window-header">
+            <span class="window-title">Dossier</span>
+            <div class="window-controls">
+                <button class="minimize"></button>
+                <button class="maximize"></button>
+                <button class="close"></button>
+            </div>
+        </div>
+        <div class="window-content">
+            Contenu du dossier
+        </div>
+    </div>
 
 
     <!-- ==================== NAVBAR ===================== -->
