--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="cursor.css">
     <link rel="stylesheet" href="selection-box.css">
     <link rel="stylesheet" href="windowsmanager.css">
+    <link rel="stylesheet" href="clock-dashboard.css">
 
     <!-- Firebase App  -->
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
@@ -108,7 +109,6 @@
                     <span class="window-title" data-translate="calculatrice"></span>
                     <div class="window-controls">
                         <button class="minimize"></button>
-                        <button class="maximize"></button>
                         <button class="close"></button>
                     </div>
                 </div>
@@ -200,19 +200,43 @@
     </div>
 
 
-    <div id="clock-window-template" class="window hidden">
+    <div id="clock-window-template" class="window hidden fixed-size">
         <div class="window-header">
-            <span class="window-title">Dossier</span>
+            <span class="window-title">Horloger</span>
             <div class="window-controls">
                 <button class="minimize"></button>
-                <button class="maximize"></button>
                 <button class="close"></button>
             </div>
         </div>
-        <div class="window-content">
-            Contenu du dossier
+        <div class="window-content clock-dashboard">
+            <div class="analog-clock-container">
+            <div class="analog-clock">
+                <div class="face">
+                    <div class="hand hour-hand"></div>
+                    <div class="hand minute-hand"></div>
+                    <div class="hand second-hand"></div>
+                </div>
+            </div>     
+        </div>       
+            
+            <div class="digital-clock">
+                <!-- Horloge numérique ici -->
+            </div>
+            <div class="date">
+                <!-- Date ici -->
+            </div>
+            <div class="chronometer">
+                <!-- Chronomètre ici -->
+            </div>
+            <div class="timer">
+                <!-- Minuteur ici -->
+            </div>
+            <div class="annual-calendar">
+                <!-- Calendrier annuel ici -->
+            </div>
         </div>
     </div>
+    
 
 
     <!-- ==================== NAVBAR ===================== -->
@@ -268,6 +292,8 @@
     <script type="module" src="create-folder.js" defer></script>
     <script src="traduction-data.js"></script>
     <script src="traduction.js"></script>
+    <script type="module" src="clock-dashboard.js"></script>
+
 
 
 
