Better Cursor - No Resize

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 <body>
     <div id="cursor"></div>
 
+    
+
 
 
     <div class="windows">
@@ -89,6 +91,7 @@
             </div>
             <div id="window3" class="window fixed-size">
                 <div class="window-header">
+                    <span class="window-title">Window </span>
                     <div class="window-controls">
                         <button class="minimize"></button>
                         <button class="close"></button>
