--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
             <div class="desktop-icon-container">
                 <div class="desktop-icon" data-window="calculator" data-id="calculator">
-                    <img class="desktop-icon-image" src="./Icons/Computer.png" alt="Application Icon">
+                    <img class="desktop-icon-image" src="./Icons/Calculator.png" alt="Application Icon">
                     <p class="desktop-icon-label">Calculatrice</p>
                 </div>
             </div>
@@ -118,7 +118,7 @@
                 </div>
             </div>
 
-            <div id="calculator-template" class="window hidden fixed-size">
+            <div id="calculator-template" class="window hidden fixed-size" data-icon="./Data-Icons/Calculator.png">
                 <div class="window-header">
                     <span class="window-title" data-translate="calculatrice"></span>
                     <div class="window-controls">
