Better vps size

--- a/index.html
+++ b/index.html
@@ -43,25 +43,25 @@
             <div class="desktop-icon-container" data-init-x="0" data-init-y="0">
                 <div class="desktop-icon" data-window="calculator" data-id="calculator">
                     <img class="desktop-icon-image" src="./Icons/Computer.png" alt="Application Icon">
-                    <p class="desktop-icon-label">Système</p>
+                    <p class="desktop-icon-label" data-translate="computer"></p>
                 </div>
             </div>
             <div class="desktop-icon-container">
                 <div class="desktop-icon" data-window="explorer-window" data-id="explorer-window">
                     <img class="desktop-icon-image" src="./Icons/Folder-1.png" alt="Folder Icon">
-                    <p class="desktop-icon-label">Folder</p>
+                    <p class="desktop-icon-label" data-translate="folder"></p>
                 </div>
             </div>
             <div class="desktop-icon-container">
                 <div class="desktop-icon" data-window="calculator" data-id="calculator">
                     <img class="desktop-icon-image" src="./Icons/Calculator.png" alt="Application Icon">
-                    <p class="desktop-icon-label">Calculatrice</p>
+                    <p class="desktop-icon-label" data-translate="calculatrice"></p>
                 </div>
             </div>
             <div class="desktop-icon-container">
                 <div class="desktop-icon" data-window="kaboomcraze" data-id="kaboomcraze">
                     <img class="desktop-icon-image" src="./Icons/Kaboom.png" alt="Application Icon">
-                    <p class="desktop-icon-label">Kaboom Craze</p>
+                    <p class="desktop-icon-label">Kaboom</p>
                 </div>
             </div>
 
