🩹 Fix buttons shadow

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
     <div class="navbar">
         <div class="left-section">
             <div class="dropdown">
-                <button class="dropbtn principal">Mathis Vaille</button>
+                <button class="dropbtn principal hoverable-button">Mathis Vaille</button>
                 <div class="dropdown-content principal-option">
                     <a href="#" data-action="openAboutWindow" data-window="about-window" data-id="navbar-about-window">À
                         Propos</a>
@@ -281,14 +281,14 @@
         </div>
         <div class="right-section">
             <div class="dropdown language-dropdown">
-                <button class="dropbtn language" id="currentLanguage">FR</button>
+                <button class="dropbtn language hoverable-button" id="currentLanguage">FR</button>
                 <div class="dropdown-content language-options">
                     <a href="#" data-lang="fr">FR</a>
                     <a href="#" data-lang="en">EN</a>
                 </div>
             </div>
             <span class="navbar-separator"></span>
-            <button class="clock-btn" id="clock-button" data-action="openClockWindow" data-window="clock-window"
+            <button class="clock-btn hoverable-button" id="clock-button" data-action="openClockWindow" data-window="clock-window"
                 data-id="clock-window">
                 <div id="clock" class="clock"></div>
             </button>
