--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
             <span class="navbar-separator"></span>
             <div id="minimized-windows" class="minimized-window-container"></div>
             <div id="minimized-windows-overflow" class="dropdown">
-                <button id="overflow-button" class="dropbtn overflow-btn hoverable-button">...</button>
+                <button id="overflow-button" class="dropbtn hoverable-button">...</button>
                 <div class="dropdown-content minimized-overflow-options">
                     <!-- Les fenêtres minimisées en trop seront déplacées ici par JavaScript -->
                 </div>
