💄 Add proper border around file explorer window

--- a/index.html
+++ b/index.html
@@ -156,16 +156,18 @@
                     <button class="close"></button>
                 </div>
             </div>
-            <div class="window-body">
-                <div class="file-explorer-sidebar">
-                    <!-- Ici, nous pouvons ajouter des liens vers différents endroits de l'ordinateur -->
-                    <p>Mes Documents</p>
-                    <p>Images</p>
-                    <p>Downloads</p>
-                    <!-- ... -->
-                </div>
-                <div id="explorer-content" class="file-explorer-main">
-                    <!-- Les fichiers seront chargés ici -->
+            <div class="window-content">
+                <div class="window-body">
+                    <div class="file-explorer-sidebar">
+                        <!-- Ici, nous pouvons ajouter des liens vers différents endroits de l'ordinateur -->
+                        <p>Mes Documents</p>
+                        <p>Images</p>
+                        <p>Downloads</p>
+                        <!-- ... -->
+                    </div>
+                    <div id="explorer-content" class="file-explorer-main">
+                        <!-- Les fichiers seront chargés ici -->
+                    </div>    
                 </div>
             </div>
         </div>
