✨ Primitive file system

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="clock-dashboard.css">
     <link rel="stylesheet" href="three.css">
     <link rel="stylesheet" href="kaboomcraze.css">
+    <link rel="stylesheet" href="file-explorer.css">
 
     <script src="vps.js" defer></script>
     <!-- Three.js -->
@@ -75,7 +76,7 @@
                 </div>
             </div>
             <div class="desktop-icon-container">
-                <div class="desktop-icon" data-window="explorer-window" data-id="explorer-window">
+                <div class="desktop-icon" data-window="explorer-window" data-id="explorer-window" data-fs-id="0">
                     <img class="desktop-icon-image" src="./Icons/Folder-1.png" alt="Folder Icon">
                     <p class="desktop-icon-label" data-translate="folder"></p>
                 </div>
@@ -158,12 +159,8 @@
             </div>
             <div class="window-content">
                 <div class="window-body">
-                    <div class="file-explorer-sidebar">
-                        <!-- Ici, nous pouvons ajouter des liens vers différents endroits de l'ordinateur -->
-                        <p>Mes Documents</p>
-                        <p>Images</p>
-                        <p>Downloads</p>
-                        <!-- ... -->
+                    <div class="file-explorer-container">
+                        <!-- Les dossiers seront chargés ici -->
                     </div>
                     <div id="explorer-content" class="file-explorer-main">
                         <!-- Les fichiers seront chargés ici -->
